--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,6 +12,10 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
+          <li>
+            <%= link_to 'Signup', signup_path %>
+          </li>
+          <li><%= link_to 'Login', login_path %></li>
           <li><a href="#">Signup</a></li>
           <li><a href="#">Login</a></li>
         </ul>
