--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,20 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Microposts</title>
-    
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <%= stylesheet_link_tag  'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
 
   <body>
     <%= render 'layouts/navbar' %>
-     <div class="container">
-       <%= render 'layouts/flash_messages' %>
 
-    <%= yield %>
+    <div class="container">
+      <%= render 'layouts/flash_messages' %>
+
+      <%= yield %>
     </div>
   </body>
 </html>
