--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,3 +1,34 @@
+<% if logged_in? %>
+
+  <p>ログイン完了ユーザ: 
+<%= current_user.name %>
+</p>
+  
+  <div class="row">
+    <aside class="col-md-4">
+      
+<%= form_for(@micropost) do |f| %>
+
+        <div class="form-group">
+          
+<%= f.text_area :content, class: 'form-control', rows: 5 %>
+
+        </div>
+        
+<%= f.submit 'Post', class: 'btn btn-primary btn-block' %>
+
+      
+<% end %>
+
+    </aside>
+    <div class="col-xs-8">
+      
+<%= render 'microposts/microposts', microposts: @microposts %>
+
+    </div>
+  </div>
+<% else %>
+
 <div class="center jumbotron">
   <div class="text-center">
     <h1>Welcome to the Microposts</h1>
@@ -5,5 +36,6 @@
  <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
  
  
-  </div>
-</div>
+     </div>
+   </div>
+ <% end %>
